<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_nav_home" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_genre_movie"
            android:title="@string/title_nav_genres" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/title_nav_favorite" />


    </group>

    <item android:title="@string/title_nav_other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/title_nav_about_us" />
            <item
                android:id="@+id/nav_setting"
                android:title="@string/title_nav_settings" />
        </menu>
    </item>
</menu>