<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.it.hungvt.moviesapp.screen.detail.DetailViewModel"
            />

        <import type="com.it.hungvt.moviesapp.utils.LayoutManagerUtils"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="false"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

                <ImageView
                    android:id="@+id/image_poster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_poster_collapsed"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    setImage="@{viewModel.movie.posterPath}"
                    tools:ignore="ContentDescription"
                    />

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:onClick="@{(v)->viewModel.onBackPress(v)}"
                            android:src="@drawable/ic_arrow_left"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:text="@{viewModel.movie.title}"
                            android:textColor="@android:color/white"
                            style="?android:attr/textAppearanceLarge"
                            />
                    </LinearLayout>


                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_layout"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.movie.date}"
                        style="?android:attr/textAppearanceLarge"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/image_movie_star"
                        android:text="@{Float.toString(viewModel.movie.voteAverage)}"
                        style="?android:attr/textAppearanceLarge"
                        />

                    <ImageView
                        android:id="@+id/image_movie_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:src="@drawable/star"
                        android:tint="@color/colorAccent"
                        style="?android:attr/textAppearance"
                        />

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/title_trailer"
                    style="?android:attr/textAppearanceLarge"
                    />
                <com.google.android.youtube.player.YouTubePlayerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    keyVideoTrailer="@{viewModel.keyVideoTrailer}"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@{viewModel.movie.overview}"
                    style="?android:attr/textAppearanceLarge"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/text_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/title_actors"
                        style="?android:attr/textAppearanceLarge"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        recyclerAdapter="@{viewModel.actorAdapter}"
                        layoutManager="@{LayoutManagerUtils.linearLayoutHorizontal()}"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/text_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/title_genre"
                        style="?android:attr/textAppearanceLarge"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        recyclerAdapter="@{viewModel.genreAdapter}"
                        layoutManager="@{LayoutManagerUtils.linearLayoutHorizontal()}"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/text_productor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/title_productor"
                        style="?android:attr/textAppearanceLarge"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@id/text_productor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        recyclerAdapter="@{viewModel.productorAdapter}"
                        layoutManager="@{LayoutManagerUtils.linearLayoutHorizontal()}"
                        />
                </RelativeLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{()->viewModel.onAddMovie()}"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_favorite_heart"
            app:elevation="@dimen/elevation"
            app:fabSize="auto"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|end"
            app:pressedTranslationZ="@dimen/pressedTranslationZ"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin_end"
            android:elevation="@dimen/elevation"
            android:onClick="@{()->viewModel.onDeleteMovie()}"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_dislike"
            app:fabSize="auto"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|end"
            app:pressedTranslationZ="@dimen/pressedTranslationZ"
            />

    </android.support.design.widget.CoordinatorLayout>
</layout>
